# LaserKerf.io

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  DEPLOY.html  PROJECT.html  PROJECT.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/agent/: Cargo.toml  package.json
apps/agent/src/: main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/cam/: build-job.test.ts  build-job.ts  cam-client.ts  cam-worker.ts
apps/web/src/device/: controller.ts  device-worker.ts  worker-controller.ts
apps/web/src/editor/: ArtPanel.tsx  CamPanel.tsx  EditorCanvas.tsx  LayersPanel.tsx  MachinePanel.tsx  Toolbar.tsx  boolean.ts  store.ts
apps/web/src/render/: canvas-renderer.ts  renderer-worker.ts
apps/web/tools/: gen-icons.mjs
docs/: 01-feasibility-study.html  02-development-plan.html  03-implementation-plan.html  03-implementation-plan.md  06-decision-log.html  06-decision-log.md  README.md
e2e/: offline.spec.ts
tools/analytics/: .env.example  README.md  umami.mjs
tools/golden/: package.json
tools/golden/src/: golden.test.ts  golden.ts  index.ts
